--- a/conf/application.conf
+++ b/conf/application.conf
@@ -5,7 +5,7 @@
 # ~~~~~
 # The secret key is used to secure cryptographics functions.
 # If you deploy your application to several instances be sure to use the same key!
-application.secret="Z9521JWbv1f]8UESpNHTi3sRp/V_;A]O<sMt@bHAkxMgVbVs/gKWFs1Jf0;dKj]v"
+application.secret="SmN]hRrRlRADNdKbH<SFoaqdPjnu8qH37RyOxhOCtlstrblwlD:95a5cGJe2<8Uf"
 
 # The application languages
 # ~~~~~
@@ -33,13 +33,11 @@ application.langs="en"
 # You can declare as many datasources as you want.
 # By convention, the default datasource is named `default`
 #
-
-jpa.default=h2PersistenceUnit
 db.default.driver=org.h2.Driver
 db.default.url="jdbc:h2:mem:play"
 # db.default.user=sa
 # db.default.password=""
-
+jpa.default=h2PersistenceUnit
 #
 # You can expose this datasource via JNDI if needed (Useful for JPA)
 db.default.jndiName=DefaultDS
@@ -48,6 +46,7 @@ db.default.jndiName=DefaultDS
 # ~~~~~
 # You can disable evolutions if needed
 # evolutionplugin=disabled
+
 
 # Ebean configuration
 # ~~~~~
